--- a/package.json
+++ b/package.json
@@ -2,18 +2,29 @@
   "name": "numoen",
   "license": "UNLICENSED",
   "scripts": {
-    "codegen": "graph codegen",
+    "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
     "clean": "rm -rf build/ generated/",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ kyscott/numoen",
     "create-local": "graph create --node http://localhost:8020/ kyscott/numoen",
     "remove-local": "graph remove --node http://localhost:8020/ kyscott/numoen",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kyscott/numoen",
-    "test": "graph test"
+    "test": "graph test",
+    "lint": "eslint src/ --cache",
+    "lint:fix": "eslint --fix --cache src/",
+    "lint:ci": "eslint src/ --max-warnings=0"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.37.7",
     "@graphprotocol/graph-ts": "0.29.1"
   },
-  "devDependencies": { "matchstick-as": "0.5.0" }
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "matchstick-as": "0.5.0",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
+  }
 }
