--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "matchstick-as": "0.5.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
-  }
+  },
+  "packageManager": "pnpm@7.26.0"
 }
