--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,14 +6,14 @@ dataSources:
     name: Factory
     network: mainnet
     source:
-      address: "0x09c1133669cb9b49704dc27ae0b523be74467f2a"
+      address: '0x09c1133669cb9b49704dc27ae0b523be74467f2a'
       abi: Factory
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - Factory
+        - Lendgine
       abis:
         - name: Factory
           file: ./abis/Factory.json
