--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,6 +8,7 @@ dataSources:
     source:
       address: '0x09c1133669cb9b49704dc27ae0b523be74467f2a'
       abi: Factory
+      startBlock: 16673082
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
