--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: Factory
-    network: mainnet
+    network: arbitrum-one
     source:
-      address: '0x09c1133669cb9b49704dc27ae0b523be74467f2a'
       abi: Factory
-      startBlock: 16673082
+      address: "0x8396a792510a402681812ece6ad3ff19261928ba"
+      startBlock: 65269032
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -19,6 +19,7 @@ dataSources:
         - name: Factory
           file: ./abis/Factory.json
       eventHandlers:
-        - event: LendgineCreated(indexed address,indexed address,uint256,uint256,indexed uint256,address)
+        - event: LendgineCreated(indexed address,indexed address,uint256,uint256,indexed
+            uint256,address)
           handler: handleLendgineCreated
       file: ./src/factory.ts
