add all events and tests

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -46,3 +46,19 @@ templates:
           handler: handleMint
         - event: Burn(indexed address,uint256,uint256,uint256,indexed address)
           handler: handleBurn
+        - event: Deposit(indexed address,uint256,uint256,indexed address)
+          handler: handleDeposit
+        - event: Withdraw(indexed address,uint256,uint256,indexed address)
+          handler: handleWithdraw
+        - event: AccrueInterest(uint256,uint256,uint256)
+          handler: handleWithdraw
+        - event: AccruePositionInterest(indexed address,uint256)
+          handler: handleWithdraw
+        - event: Collect(indexed address,indexed address,uint256)
+          handler: handleWithdraw
+        - event: Mint(uint256,uint256,uint256)
+          handler: handlePairMint
+        - event: Burn(uint256,uint256,uint256,indexed address)
+          handler: handlePairBurn
+        - event: Swap(uint256,uint256,uint256,uint256,indexed address)
+          handler: handleSwap
