--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -7,7 +7,7 @@ dataSources:
     network: arbitrum-one
     source:
       abi: Factory
-      address: '0x8396a792510a402681812ece6ad3ff19261928ba'
+      address: "0x8396a792510a402681812ece6ad3ff19261928ba"
       startBlock: 65269032
     mapping:
       kind: ethereum/events
@@ -51,11 +51,11 @@ templates:
         - event: Withdraw(indexed address,uint256,uint256,indexed address)
           handler: handleWithdraw
         - event: AccrueInterest(uint256,uint256,uint256)
-          handler: handleWithdraw
+          handler: handleAccrueInterest
         - event: AccruePositionInterest(indexed address,uint256)
-          handler: handleWithdraw
+          handler: handleAccruePositionInterest
         - event: Collect(indexed address,indexed address,uint256)
-          handler: handleWithdraw
+          handler: handleCollect
         - event: Mint(uint256,uint256,uint256)
           handler: handlePairMint
         - event: Burn(uint256,uint256,uint256,indexed address)
