--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "create-local": "graph create --node http://localhost:8020/ kyscott/numoen",
     "remove-local": "graph remove --node http://localhost:8020/ kyscott/numoen",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kyscott/numoen",
+    "prepare": "husky install",
     "test": "graph test",
-    "lint": "eslint src/ --cache",
-    "lint:fix": "eslint --fix --cache src/",
-    "lint:ci": "eslint src/ --max-warnings=0"
+    "format": "rome format . --write",
+    "lint": "rome check ."
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.40.0",
-    "@graphprotocol/graph-ts": "0.29.3"
+    "@graphprotocol/graph-cli": "0.49.0",
+    "@graphprotocol/graph-ts": "0.30.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "matchstick-as": "0.5.1",
-    "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
+    "husky": "^8.0.3",
+    "matchstick-as": "0.5.2",
+    "rome": "^12.1.1",
+    "typescript": "^5.0.4"
   },
-  "packageManager": "pnpm@7.26.0"
+  "engines": {
+    "node": "^18",
+    "pnpm": "^8"
+  }
 }
